docs/v0.2.0a41/_sources/reference/_autosummary/hpcflow.sdk.core.workflow.WorkflowTemplate.rst.txt
hpcflow.sdk.core.workflow.WorkflowTemplate
==========================================

.. currentmodule:: hpcflow.sdk.core.workflow

.. autoclass:: WorkflowTemplate
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:
   
   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~WorkflowTemplate.from_JSON_file
      ~WorkflowTemplate.from_JSON_string
      ~WorkflowTemplate.from_YAML_file
      ~WorkflowTemplate.from_YAML_string
      ~WorkflowTemplate.from_file
      ~WorkflowTemplate.from_json_like
      ~WorkflowTemplate.to_dict
      ~WorkflowTemplate.to_json_like
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~WorkflowTemplate.resources
      ~WorkflowTemplate.workflow
      ~WorkflowTemplate.name
      ~WorkflowTemplate.tasks
      ~WorkflowTemplate.loops
   
   